tests/syntax_error/import_missing_comma.jou
from "stdlib/io.jou" import printf puts  # Error: expected a comma or end of line, got a variable name 'puts'
